Version 1.0.1-devel
-------------------


Version 1.0.0 [04 Dec 2015]
---------------------------
- Initial public release.