@@ -272,7 +272,7 @@ class parser {
  public:
   virtual ~parser() {};
 
-  virtual void [parse #parser_parse]([tree #tree]& t) const = 0;
+  virtual void [parse #parser_parse]([tree #tree]& t, unsigned beam_size = 0) const = 0;
 
   enum { NO_CACHE = 0, FULL_CACHE = 2147483647};
   static [parser #parser]* [load #parser_load_cstring](const char* file, unsigned cache = 1000);
@@ -284,12 +284,16 @@ The [``parser`` #parser] class allows parsing given sentence,
 using an existing parser model.
 
 === parser::parse() ===[parser_parse]
-``` virtual void parse([tree #tree]& t) const = 0;
+``` virtual void parse([tree #tree]& t, unsigned beam_size = 0) const = 0;
 
 Parses the sentence (passed in the [``tree`` #tree] instance)
 and returns a dependency tree. If there are any links in the
 input tree, they are discarded using
 [``tree::unlink_all_nodes`` #tree_unlink_all_nodes] first.
+
+The beam size of the decoding can optionally be specified, with the value
+``0`` representing parser model default. If the parser model does not
+support beam search, the argument is ignored.
 
 === parser::load(const char*) ===[parser_load_cstring]
 ``` static [parser #parser]* load(const char* file, unsigned cache = 1000);
